--- a/src/components/button/button.module.css
+++ b/src/components/button/button.module.css
@@ -2,4 +2,10 @@
   font-family: 'Montserrat', sans-serif;
   color: rgba(255, 104, 91, 1);
   border: solid 2px rgba(255, 104, 91, 1);
+  padding: 15px 40px;
+}
+
+.button:is(:hover, :focus) {
+  color: rgba(255, 255, 255, 1);
+  background-color:  rgba(255, 104, 91, 1);;
 }
