--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -2,6 +2,7 @@
   padding: 20px 70px;
   display: flex;
   justify-content: space-between;
+  border-bottom: solid 2px rgba(0,0,0,1);
 }
 
 .header__link_container {
@@ -18,6 +19,7 @@
   line-height: 24px;
   color: rgba(115, 115, 115, 1);
   border-radius: 4px;
+  letter-spacing: 0.2px;
 }
 
 .header__link:is(:hover, :focus) {
@@ -26,4 +28,5 @@
   line-height: 1;
   color: rgba(255, 104, 91, 1);
   border: solid 2px rgba(255,104,91,1);
+  font-weight: 500;
 }
