--- a/src/index.css
+++ b/src/index.css
@@ -12,4 +12,9 @@
   font-style: normal;
 }
 
-
+@font-face {
+  font-family: 'Open Sans';
+  src: url('./assets/fonts/OpenSans-VariableFont_wdth,wght.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
