--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -1,5 +1,5 @@
 .header {
-  padding: 20px 70px;
+  padding: 15px 60px;
   display: flex;
   justify-content: space-between;
   border-bottom: solid 2px rgba(0,0,0,1);
@@ -7,8 +7,6 @@
 
 .header__link_container {
   display: flex;
-  gap: 49px;
-
 }
 
 .header__link {
@@ -17,7 +15,7 @@
   font-weight: 600;
   font-size: 15px;
   line-height: 24px;
-  color: rgba(115, 115, 115, 1);
+  color: rgb(2, 0, 0);
   border-radius: 4px;
   letter-spacing: 0.2px;
 }
