--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,3 +1,3 @@
 .content {
-  padding: 60px 185px;
+  padding: clamp(3.53125rem, 2.662rem + 3.7089vw, 6rem) clamp(0.625rem, -3.4903rem + 17.5587vw, 12.3125rem);
 }
