--- a/src/components/card/card.module.css
+++ b/src/components/card/card.module.css
@@ -2,10 +2,11 @@
   padding: 35px 40px;
   box-shadow: 0px 13px 19px 0px rgba(0, 0, 0, 0.07);
   display: flex;
-  gap: 6px;
+  gap: 20px;
   max-width: 328px;
   width: 100%;
   flex-direction: column;
+  box-sizing: border-box;
 }
 
 .card__title {
