--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -11,12 +11,12 @@
 
 .header__link {
   font-family: 'Open Sans', sans-serif;
-  padding: 8px 60px;
+  padding: 8px clamp(1.25rem, 0.4137rem + 3.5681vw, 3.625rem);
   font-weight: 600;
   font-size: 15px;
   line-height: 24px;
   color: rgb(2, 0, 0);
-  border-radius: 4px;
+  border-radius: 10px;
   letter-spacing: 0.2px;
 }
 
@@ -27,10 +27,4 @@
   color: rgba(255, 104, 91, 1);
   border: solid 2px rgba(255,104,91,1);
   font-weight: 500;
-}
-
-@media(width<=375px) {
-  .header {
-    justify-content: space-between;
-  }
 }
