--- a/src/components/button/button.module.css
+++ b/src/components/button/button.module.css
@@ -1,8 +1,8 @@
 .button {
-  font-family: 'Montserrat', sans-serif;
-  color: rgba(255, 104, 91, 1);
+  font-family: var(--main-font), sans-serif;
+  color: var(--accent-color);
   background-color: transparent;
-  border: solid 2px rgba(255, 104, 91, 1);
+  border: solid 2px var(--accent-color);
   padding: 15px 40px;
   font-size: 14px;
   font-weight: 700;
@@ -10,6 +10,6 @@
 }
 
 .button:is(:hover, :focus) {
-  color: rgba(255, 255, 255, 1);
-  background-color:  rgba(255, 104, 91, 1);;
+  color: var(--bg-color);
+  background-color:  var(--accent-color);
 }
