--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,7 @@
   --bg-color: rgba(255, 255, 255, 1);
   --accent-color: rgba(255, 104, 91, 1);
   --headlines-color: rgba(37, 43, 66, 1);
+  --text-color: rgba(115, 115, 115, 1);
   --main-font: 'Montserrat';
 }
 
