--- a/src/components/modalOverlay/modal_overlay.module.css
+++ b/src/components/modalOverlay/modal_overlay.module.css
@@ -4,6 +4,6 @@
   right: 0;
   bottom: 0;
   left: 0;
-  background-color: var(--text-color);
+  background-color: rgba(115,115,115, 0.5);
   z-index: 2;
 }
